# videvidevideo

./: Pipeline.md  makefile  pyproject.toml  setup.sh
devnotes/: Pipeline.md
src/: main.py  parser.py
test/dsl/: simple_test_narration_clips_shortened.yaml
