[project]
name = "videvidevideo"
version = "0.1.0"
description = "CLI-native long-form video production pipeline"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "elevenlabs",
    "requests",
    "anthropic",
    "opentimelineio",
]

[project.scripts]
dettadon = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
